<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notename_et"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:hint="@string/note_name"
    />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notedetails_et"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/notename_et"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/note_details"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/addbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/notename_et"
        app:layout_constraintBottom_toBottomOf="@id/notedetails_et"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/dark_red"
        android:text="@string/add"
        android:textStyle="bold"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notedetails_et"

        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/nots_items"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>