<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetails"
    android:background="@color/light_pink"
    >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/note_name"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_30sdp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/details_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/note_details"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_30sdp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameinfo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/name_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ACTUAL NAME" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsinfo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:textColor="@color/black"

        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/details_tv"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        tools:text="ACTUAL DETAILS" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/showdetals_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/details_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/showdetals_delete_button"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/edit"
        android:textStyle="bold"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/showdetals_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/details_tv"
        app:layout_constraintStart_toEndOf="@id/showdetals_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/delete"
        android:textStyle="bold"
        />
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/edit_note_name"
        app:layout_constraintStart_toStartOf="@id/edit_note_name"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/edit_section"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_note_name"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:hint="@string/note_name"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showdetals_edit_button" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_note_details"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/note_details"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_note_name" />


</androidx.constraintlayout.widget.ConstraintLayout>